# Kyto

./: .gitattributes  .gitignore  AUTHORS.md  BRANDING.md  BUGFIXES.md  CHANGELOG.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  FRONTEND_COMPLETE.md  FRONTEND_IMPROVEMENTS.md  LICENSE  README.md  README_DEV.md  REMAINING_UPDATES.md  package-lock.json  package.json
.github/workflows/: ci.yml
PLANS/: v2.0.1.md
backend/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.example.toml
backend/scripts/: init-db.js
backend/src/: architecture.ts  index.ts  types.ts
backend/src-cf/: index.ts
backend/src-cf/api/: projects-cf.ts
backend/src/api/: ai.ts  analytics.ts  autoGen.ts  export.ts  projects.ts
backend/src/collab/: room.ts
backend/src/db/: d1-schema.sql  schema.sql
backend/src/durable-objects/: room.ts
backend/src/services/: ai-service.ts  error-handler-service.ts  logger-service.ts  project-service.ts
backend/src/types/: pg.d.ts  ws.d.ts
backend/test/: export.test.ts
backend/tests/integration/: api-projects.test.ts
backend/tests/unit/: error-handler.test.ts  project-service.test.ts
docs/: README.md
frontend/: README.md  index.html  lint_output.txt  package-lock.json  package.json  tailwind.config.js  tsc_output.txt  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AIChat.tsx
frontend/src/docs/: blocks-documentation.md
frontend/test/: editor-canvas.test.tsx  export-dialog.test.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+111 files in other folders)
